// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PhoneInput renders correctly - custom country code 1`] = `
<View
  style={
    {
      "width": "100%",
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginBottom": 6,
      }
    }
  >
    <Text
      style={
        [
          {
            "color": "#FFFFFF",
            "fontFamily": "PlusJakartaSans-Regular",
            "fontSize": 16,
            "fontWeight": "400",
            "letterSpacing": 0,
            "lineHeight": 24,
            "textAlign": "left",
          },
          {
            "color": "#A9A9A9",
            "fontFamily": "PlusJakartaSans-Regular",
            "fontSize": 12,
            "lineHeight": 20,
          },
        ]
      }
    >
      Phone Number
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "borderColor": "transparent",
          "borderRadius": 12,
          "borderWidth": 1,
          "flexDirection": "row",
          "gap": 16,
          "paddingHorizontal": 16,
          "paddingVertical": 16,
        },
        {
          "borderColor": "transparent",
        },
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 4,
        }
      }
    >
      <Text
        style={
          [
            {
              "fontFamily": "PlusJakartaSans-Regular",
              "fontSize": 20,
              "includeFontPadding": false,
              "lineHeight": 32,
            },
            {
              "color": "#444444",
            },
          ]
        }
      >
        +1
      </Text>
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={16}
        bbWidth={16}
        fill="none"
        focusable={false}
        height={16}
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flex": 0,
              "height": 16,
              "width": 16,
            },
          ]
        }
        vbHeight={16}
        vbWidth={16}
        width={16}
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
            ]
          }
        >
          <RNSVGPath
            d="M4 6L8 10L12 6"
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
            propList={
              [
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4282664004,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={1.6}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
    <TextInput
      accessibilityLabel="Phone Number"
      accessibilityState={
        {
          "disabled": false,
        }
      }
      editable={true}
      keyboardType="phone-pad"
      maxLength={11}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      placeholder="Enter Number"
      placeholderTextColor="#444444"
      style={
        [
          {
            "color": "#444444",
            "flex": 1,
            "fontFamily": "PlusJakartaSans-Regular",
            "fontSize": 20,
            "height": 32,
            "includeFontPadding": false,
            "margin": 0,
            "padding": 0,
            "textAlignVertical": "center",
          },
          false,
          false,
          undefined,
        ]
      }
      value=""
    />
  </View>
</View>
`;

exports[`PhoneInput renders correctly - custom placeholder 1`] = `
<View
  style={
    {
      "width": "100%",
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginBottom": 6,
      }
    }
  >
    <Text
      style={
        [
          {
            "color": "#FFFFFF",
            "fontFamily": "PlusJakartaSans-Regular",
            "fontSize": 16,
            "fontWeight": "400",
            "letterSpacing": 0,
            "lineHeight": 24,
            "textAlign": "left",
          },
          {
            "color": "#A9A9A9",
            "fontFamily": "PlusJakartaSans-Regular",
            "fontSize": 12,
            "lineHeight": 20,
          },
        ]
      }
    >
      Mobile
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "borderColor": "transparent",
          "borderRadius": 12,
          "borderWidth": 1,
          "flexDirection": "row",
          "gap": 16,
          "paddingHorizontal": 16,
          "paddingVertical": 16,
        },
        {
          "borderColor": "transparent",
        },
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 4,
        }
      }
    >
      <Text
        style={
          [
            {
              "fontFamily": "PlusJakartaSans-Regular",
              "fontSize": 20,
              "includeFontPadding": false,
              "lineHeight": 32,
            },
            {
              "color": "#444444",
            },
          ]
        }
      >
        +91
      </Text>
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={16}
        bbWidth={16}
        fill="none"
        focusable={false}
        height={16}
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flex": 0,
              "height": 16,
              "width": 16,
            },
          ]
        }
        vbHeight={16}
        vbWidth={16}
        width={16}
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
            ]
          }
        >
          <RNSVGPath
            d="M4 6L8 10L12 6"
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
            propList={
              [
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4282664004,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={1.6}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
    <TextInput
      accessibilityLabel="Mobile"
      accessibilityState={
        {
          "disabled": false,
        }
      }
      editable={true}
      keyboardType="phone-pad"
      maxLength={11}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      placeholder="Your phone number"
      placeholderTextColor="#444444"
      style={
        [
          {
            "color": "#444444",
            "flex": 1,
            "fontFamily": "PlusJakartaSans-Regular",
            "fontSize": 20,
            "height": 32,
            "includeFontPadding": false,
            "margin": 0,
            "padding": 0,
            "textAlignVertical": "center",
          },
          false,
          false,
          undefined,
        ]
      }
      value=""
    />
  </View>
</View>
`;

exports[`PhoneInput renders correctly - disabled 1`] = `
<View
  style={
    {
      "width": "100%",
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginBottom": 6,
      }
    }
  >
    <Text
      style={
        [
          {
            "color": "#FFFFFF",
            "fontFamily": "PlusJakartaSans-Regular",
            "fontSize": 16,
            "fontWeight": "400",
            "letterSpacing": 0,
            "lineHeight": 24,
            "textAlign": "left",
          },
          {
            "color": "#A9A9A9",
            "fontFamily": "PlusJakartaSans-Regular",
            "fontSize": 12,
            "lineHeight": 20,
          },
        ]
      }
    >
      Phone Number
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "borderColor": "transparent",
          "borderRadius": 12,
          "borderWidth": 1,
          "flexDirection": "row",
          "gap": 16,
          "paddingHorizontal": 16,
          "paddingVertical": 16,
        },
        {
          "borderColor": "transparent",
        },
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 4,
        }
      }
    >
      <Text
        style={
          [
            {
              "fontFamily": "PlusJakartaSans-Regular",
              "fontSize": 20,
              "includeFontPadding": false,
              "lineHeight": 32,
            },
            {
              "color": "#444444",
            },
          ]
        }
      >
        +91
      </Text>
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={16}
        bbWidth={16}
        fill="none"
        focusable={false}
        height={16}
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flex": 0,
              "height": 16,
              "width": 16,
            },
          ]
        }
        vbHeight={16}
        vbWidth={16}
        width={16}
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
            ]
          }
        >
          <RNSVGPath
            d="M4 6L8 10L12 6"
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
            propList={
              [
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4282664004,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={1.6}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
    <TextInput
      accessibilityLabel="Phone Number"
      accessibilityState={
        {
          "disabled": true,
        }
      }
      editable={false}
      keyboardType="phone-pad"
      maxLength={11}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      placeholder="Enter Number"
      placeholderTextColor="#444444"
      style={
        [
          {
            "color": "#444444",
            "flex": 1,
            "fontFamily": "PlusJakartaSans-Regular",
            "fontSize": 20,
            "height": 32,
            "includeFontPadding": false,
            "margin": 0,
            "padding": 0,
            "textAlignVertical": "center",
          },
          false,
          false,
          {
            "opacity": 0.5,
          },
        ]
      }
      value=""
    />
  </View>
</View>
`;

exports[`PhoneInput renders correctly - empty state 1`] = `
<View
  style={
    {
      "width": "100%",
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginBottom": 6,
      }
    }
  >
    <Text
      style={
        [
          {
            "color": "#FFFFFF",
            "fontFamily": "PlusJakartaSans-Regular",
            "fontSize": 16,
            "fontWeight": "400",
            "letterSpacing": 0,
            "lineHeight": 24,
            "textAlign": "left",
          },
          {
            "color": "#A9A9A9",
            "fontFamily": "PlusJakartaSans-Regular",
            "fontSize": 12,
            "lineHeight": 20,
          },
        ]
      }
    >
      Phone Number
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "borderColor": "transparent",
          "borderRadius": 12,
          "borderWidth": 1,
          "flexDirection": "row",
          "gap": 16,
          "paddingHorizontal": 16,
          "paddingVertical": 16,
        },
        {
          "borderColor": "transparent",
        },
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 4,
        }
      }
    >
      <Text
        style={
          [
            {
              "fontFamily": "PlusJakartaSans-Regular",
              "fontSize": 20,
              "includeFontPadding": false,
              "lineHeight": 32,
            },
            {
              "color": "#444444",
            },
          ]
        }
      >
        +91
      </Text>
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={16}
        bbWidth={16}
        fill="none"
        focusable={false}
        height={16}
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flex": 0,
              "height": 16,
              "width": 16,
            },
          ]
        }
        vbHeight={16}
        vbWidth={16}
        width={16}
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
            ]
          }
        >
          <RNSVGPath
            d="M4 6L8 10L12 6"
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
            propList={
              [
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4282664004,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={1.6}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
    <TextInput
      accessibilityLabel="Phone Number"
      accessibilityState={
        {
          "disabled": false,
        }
      }
      editable={true}
      keyboardType="phone-pad"
      maxLength={11}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      placeholder="Enter Number"
      placeholderTextColor="#444444"
      style={
        [
          {
            "color": "#444444",
            "flex": 1,
            "fontFamily": "PlusJakartaSans-Regular",
            "fontSize": 20,
            "height": 32,
            "includeFontPadding": false,
            "margin": 0,
            "padding": 0,
            "textAlignVertical": "center",
          },
          false,
          false,
          undefined,
        ]
      }
      value=""
    />
  </View>
</View>
`;

exports[`PhoneInput renders correctly - with error 1`] = `
<View
  style={
    {
      "width": "100%",
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginBottom": 6,
      }
    }
  >
    <Text
      style={
        [
          {
            "color": "#FFFFFF",
            "fontFamily": "PlusJakartaSans-Regular",
            "fontSize": 16,
            "fontWeight": "400",
            "letterSpacing": 0,
            "lineHeight": 24,
            "textAlign": "left",
          },
          {
            "color": "#A9A9A9",
            "fontFamily": "PlusJakartaSans-Regular",
            "fontSize": 12,
            "lineHeight": 20,
          },
        ]
      }
    >
      Phone Number
    </Text>
    <Text
      style={
        [
          {
            "color": "#FFFFFF",
            "fontFamily": "PlusJakartaSans-Regular",
            "fontSize": 16,
            "fontWeight": "400",
            "letterSpacing": 0,
            "lineHeight": 24,
            "textAlign": "left",
          },
          {
            "color": "#E5484D",
            "fontFamily": "PlusJakartaSans-Regular",
            "fontSize": 14,
            "lineHeight": 20,
            "textAlign": "right",
          },
        ]
      }
    >
      This number is already registered.
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "borderColor": "transparent",
          "borderRadius": 12,
          "borderWidth": 1,
          "flexDirection": "row",
          "gap": 16,
          "paddingHorizontal": 16,
          "paddingVertical": 16,
        },
        {
          "borderColor": "#E5484D",
        },
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 4,
        }
      }
    >
      <Text
        style={
          [
            {
              "fontFamily": "PlusJakartaSans-Regular",
              "fontSize": 20,
              "includeFontPadding": false,
              "lineHeight": 32,
            },
            {
              "color": "#DDDDDD",
            },
          ]
        }
      >
        +91
      </Text>
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={16}
        bbWidth={16}
        fill="none"
        focusable={false}
        height={16}
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flex": 0,
              "height": 16,
              "width": 16,
            },
          ]
        }
        vbHeight={16}
        vbWidth={16}
        width={16}
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
            ]
          }
        >
          <RNSVGPath
            d="M4 6L8 10L12 6"
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
            propList={
              [
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4292730333,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={1.6}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
    <TextInput
      accessibilityLabel="Phone Number"
      accessibilityState={
        {
          "disabled": false,
        }
      }
      editable={true}
      keyboardType="phone-pad"
      maxLength={11}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      placeholder="Enter Number"
      placeholderTextColor="#444444"
      style={
        [
          {
            "color": "#444444",
            "flex": 1,
            "fontFamily": "PlusJakartaSans-Regular",
            "fontSize": 20,
            "height": 32,
            "includeFontPadding": false,
            "margin": 0,
            "padding": 0,
            "textAlignVertical": "center",
          },
          {
            "color": "#DDDDDD",
          },
          {
            "color": "#E5484D",
          },
          undefined,
        ]
      }
      value="98765 43210"
    />
  </View>
</View>
`;

exports[`PhoneInput renders correctly - with hint text 1`] = `
<View
  style={
    {
      "width": "100%",
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginBottom": 6,
      }
    }
  >
    <Text
      style={
        [
          {
            "color": "#FFFFFF",
            "fontFamily": "PlusJakartaSans-Regular",
            "fontSize": 16,
            "fontWeight": "400",
            "letterSpacing": 0,
            "lineHeight": 24,
            "textAlign": "left",
          },
          {
            "color": "#A9A9A9",
            "fontFamily": "PlusJakartaSans-Regular",
            "fontSize": 12,
            "lineHeight": 20,
          },
        ]
      }
    >
      Phone Number
    </Text>
    <Text
      style={
        [
          {
            "color": "#FFFFFF",
            "fontFamily": "PlusJakartaSans-Regular",
            "fontSize": 16,
            "fontWeight": "400",
            "letterSpacing": 0,
            "lineHeight": 24,
            "textAlign": "left",
          },
          {
            "color": "#878787",
            "fontFamily": "PlusJakartaSans-Regular",
            "fontSize": 14,
            "lineHeight": 20,
            "textAlign": "right",
          },
        ]
      }
    >
      We'll send you an OTP
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "borderColor": "transparent",
          "borderRadius": 12,
          "borderWidth": 1,
          "flexDirection": "row",
          "gap": 16,
          "paddingHorizontal": 16,
          "paddingVertical": 16,
        },
        {
          "borderColor": "transparent",
        },
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 4,
        }
      }
    >
      <Text
        style={
          [
            {
              "fontFamily": "PlusJakartaSans-Regular",
              "fontSize": 20,
              "includeFontPadding": false,
              "lineHeight": 32,
            },
            {
              "color": "#444444",
            },
          ]
        }
      >
        +91
      </Text>
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={16}
        bbWidth={16}
        fill="none"
        focusable={false}
        height={16}
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flex": 0,
              "height": 16,
              "width": 16,
            },
          ]
        }
        vbHeight={16}
        vbWidth={16}
        width={16}
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
            ]
          }
        >
          <RNSVGPath
            d="M4 6L8 10L12 6"
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
            propList={
              [
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4282664004,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={1.6}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
    <TextInput
      accessibilityLabel="Phone Number"
      accessibilityState={
        {
          "disabled": false,
        }
      }
      editable={true}
      keyboardType="phone-pad"
      maxLength={11}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      placeholder="Enter Number"
      placeholderTextColor="#444444"
      style={
        [
          {
            "color": "#444444",
            "flex": 1,
            "fontFamily": "PlusJakartaSans-Regular",
            "fontSize": 20,
            "height": 32,
            "includeFontPadding": false,
            "margin": 0,
            "padding": 0,
            "textAlignVertical": "center",
          },
          false,
          false,
          undefined,
        ]
      }
      value=""
    />
  </View>
</View>
`;

exports[`PhoneInput renders correctly - with value 1`] = `
<View
  style={
    {
      "width": "100%",
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginBottom": 6,
      }
    }
  >
    <Text
      style={
        [
          {
            "color": "#FFFFFF",
            "fontFamily": "PlusJakartaSans-Regular",
            "fontSize": 16,
            "fontWeight": "400",
            "letterSpacing": 0,
            "lineHeight": 24,
            "textAlign": "left",
          },
          {
            "color": "#A9A9A9",
            "fontFamily": "PlusJakartaSans-Regular",
            "fontSize": 12,
            "lineHeight": 20,
          },
        ]
      }
    >
      Phone Number
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "borderColor": "transparent",
          "borderRadius": 12,
          "borderWidth": 1,
          "flexDirection": "row",
          "gap": 16,
          "paddingHorizontal": 16,
          "paddingVertical": 16,
        },
        {
          "borderColor": "transparent",
        },
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 4,
        }
      }
    >
      <Text
        style={
          [
            {
              "fontFamily": "PlusJakartaSans-Regular",
              "fontSize": 20,
              "includeFontPadding": false,
              "lineHeight": 32,
            },
            {
              "color": "#DDDDDD",
            },
          ]
        }
      >
        +91
      </Text>
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={16}
        bbWidth={16}
        fill="none"
        focusable={false}
        height={16}
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flex": 0,
              "height": 16,
              "width": 16,
            },
          ]
        }
        vbHeight={16}
        vbWidth={16}
        width={16}
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
            ]
          }
        >
          <RNSVGPath
            d="M4 6L8 10L12 6"
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
            propList={
              [
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4292730333,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={1.6}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
    <TextInput
      accessibilityLabel="Phone Number"
      accessibilityState={
        {
          "disabled": false,
        }
      }
      editable={true}
      keyboardType="phone-pad"
      maxLength={11}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      placeholder="Enter Number"
      placeholderTextColor="#444444"
      style={
        [
          {
            "color": "#444444",
            "flex": 1,
            "fontFamily": "PlusJakartaSans-Regular",
            "fontSize": 20,
            "height": 32,
            "includeFontPadding": false,
            "margin": 0,
            "padding": 0,
            "textAlignVertical": "center",
          },
          {
            "color": "#DDDDDD",
          },
          false,
          undefined,
        ]
      }
      value="98765 43210"
    />
  </View>
</View>
`;

exports[`PhoneInput renders with empty label 1`] = `
<View
  style={
    {
      "width": "100%",
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginBottom": 6,
      }
    }
  >
    <Text
      style={
        [
          {
            "color": "#FFFFFF",
            "fontFamily": "PlusJakartaSans-Regular",
            "fontSize": 16,
            "fontWeight": "400",
            "letterSpacing": 0,
            "lineHeight": 24,
            "textAlign": "left",
          },
          {
            "color": "#A9A9A9",
            "fontFamily": "PlusJakartaSans-Regular",
            "fontSize": 12,
            "lineHeight": 20,
          },
        ]
      }
    />
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "borderColor": "transparent",
          "borderRadius": 12,
          "borderWidth": 1,
          "flexDirection": "row",
          "gap": 16,
          "paddingHorizontal": 16,
          "paddingVertical": 16,
        },
        {
          "borderColor": "transparent",
        },
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 4,
        }
      }
    >
      <Text
        style={
          [
            {
              "fontFamily": "PlusJakartaSans-Regular",
              "fontSize": 20,
              "includeFontPadding": false,
              "lineHeight": 32,
            },
            {
              "color": "#444444",
            },
          ]
        }
      >
        +91
      </Text>
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={16}
        bbWidth={16}
        fill="none"
        focusable={false}
        height={16}
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flex": 0,
              "height": 16,
              "width": 16,
            },
          ]
        }
        vbHeight={16}
        vbWidth={16}
        width={16}
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
            ]
          }
        >
          <RNSVGPath
            d="M4 6L8 10L12 6"
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
            propList={
              [
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4282664004,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={1.6}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
    <TextInput
      accessibilityLabel=""
      accessibilityState={
        {
          "disabled": false,
        }
      }
      editable={true}
      keyboardType="phone-pad"
      maxLength={11}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      placeholder="Enter Number"
      placeholderTextColor="#444444"
      style={
        [
          {
            "color": "#444444",
            "flex": 1,
            "fontFamily": "PlusJakartaSans-Regular",
            "fontSize": 20,
            "height": 32,
            "includeFontPadding": false,
            "margin": 0,
            "padding": 0,
            "textAlignVertical": "center",
          },
          false,
          false,
          undefined,
        ]
      }
      value=""
    />
  </View>
</View>
`;
